CRUD et T.U. Profession